# MNIST

./: LICENSE  Makefile  README.md  data.dvc  pyproject.toml
.dvc/: config
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mnist_dvc_project/: __init__.py
